--- a/2pac.html
+++ b/2pac.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ayuda a un peludo</title>
-    <link type="text/css" rel="stylesheet" href="assets/css/estilos2.css">
-    <link rel="icon" type="image/jpg" href="assets/img/LOGO.png">
+    <link type="text/css" rel="stylesheet" href="assets/css/Estilos.css">
 </head>
 <ul>
     <li><a class="active" href="index.html">Inicio</a></li>
@@ -14,11 +14,14 @@
     <li><a href="perros_adop.html">Perros</a></li>
     <li><a href="Gatos.html">Gatos</a></li>
 </ul>
+
 <body>
-    <h2>Bolt</h2>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fe/Dalmatien.jpg/320px-Dalmatien.jpg" alt="Bolt" class="tamano_imagenes_4">
+    <div></div>
+    <h2>Tupac</h2>
+    <img src="./assets/img/cat-black-kitty-black-cat-e1692190700182.jpg" alt="." class="tamannio_imagen_1">
     <h4>Edad: 10 años</h4>
-    <h4>Genero: Macho</h4>
-    <h4>Esterilizado: No</h4>
+    <h4>Sexo: Macho</h4>
+    <h4>Esterilizado: Si</h4>
 </body>
+
 </html>
