--- a/Eminem.html
+++ b/Eminem.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ayuda a un peludo</title>
-    <link type="text/css" rel="stylesheet" href="assets/css/Estilos.css">
-    <link rel="icon" type="image/jpg" href="assets/img/LOGO.png">
+    <link type="text/css" rel="stylesheet" href="assets/css/estilos.css">
 </head>
 <ul>
     <li><a class="active" href="index.html">Inicio</a></li>
@@ -18,9 +17,9 @@
 
 <body>
     <div></div>
-    <h2>Kendrick</h2>
-    <img src="https://depor.com/resizer/jYn-JSloG_bPh1f2CzOOYj8UkmM=/1200x1200/smart/filters:format(jpeg):quality(75)/cloudfront-us-east-1.images.arcpublishing.com/elcomercio/PJDTJJEX7JGNHHAA63U54AIODM.jpg" alt="." class="border_1">
-    <h4>Edad: 5 años</h4>
+    <h2>Eminem</h2>
+    <img src="./assets/img/eminem.jpg" alt="." class="tamannio_imagen_1">
+    <h4>Edad: 10 años</h4>
     <h4>Sexo: Macho</h4>
     <h4>Esterilizado: Si</h4>
 </body>
