--- a/Kendrick.html
+++ b/Kendrick.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ayuda a un peludo</title>
-    <link type="text/css" rel="stylesheet" href="assets/css/estilos2.css">
-    <link rel="icon" type="image/jpg" href="assets/img/LOGO.png">
+    <link type="text/css" rel="stylesheet" href="assets/css/Estilos.css">
 </head>
 <ul>
     <li><a class="active" href="index.html">Inicio</a></li>
@@ -15,12 +14,14 @@
     <li><a href="perros_adop.html">Perros</a></li>
     <li><a href="Gatos.html">Gatos</a></li>
 </ul>
+
 <body>
-    <h2>Rihanna</h2>
-    <img src="https://www.hogarmania.com/archivos/202309/nombres-para-perros-negros-raza-schnauzer-XxXx80.jpg" alt="Flaca" class="tamano_imagenes_3">
-    <h4>Edad: 4 años</h4>
-    <h4>Genero: Hembra</h4>
-    <h4>Esterilizado: Si</h4>
+    <div></div>
+    <h2>Kendrick</h2>
+    <img src="./assets/img/kendrick.jpg" alt="." class="border_1">
+    <h4>Edad: 5 años</h4>
+    <h4>Sexo: Macho</h4>
+    <h4>Esterilizado: No</h4>
 </body>
 
 </html>
