--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <center> Lorem Ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore 
         magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
         consequat. Duis aute iure dolor in reprehenderit in voluptate velit esse cillium dolore eu fugiat nulla pariatur.
-        excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</center>
+        excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia dese molli anim id est laborum.</center>
 </p>
 
 <center>
@@ -43,12 +43,12 @@
 
 
     <ul>
-        <p style="color: rgb(0, 0, 0);">Rodrigo Soto - Encargado de adopción</p>
+        <p style="color: rgb(10, 10, 10);">Rodrigo Soto - Fundador</p>
 
     </ul>
 
     <h2>
-        <center>Nuestras secciones de ayuda:</center>
+        <center>AYUDA: </center>
     </h2>
 
     <table style="width:100%">
