--- a/perros_adop.html
+++ b/perros_adop.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ayuda a un peludo</title>
     <link type="text/css" rel="stylesheet" href="assets/css/estilos2.css">
-    <link rel="icon" type="image/jpg" href="assets/img/LOGO.png">
+    <link type="text/css" rel="stylesheet" href="assets/css/estilos.css">
 
 </head>
 
@@ -21,27 +21,25 @@
     <h1>Perros en Adopcion</h1>
     <p>
     <h4>
-        A un perro no le importa si eres rico o pobre, inteligente o tonto .Dale tu corazon y el te dara
-        el suyo. ¿Crees que los perros no iran al cielo? te digo que ellos estaran ahi mucho antes que cualquiera
-        de nosotros
+        ADOPTA
     </h4>
     </p>
 
     <table>
         <tr>
             <td class="animal">
-                <a href="Bolt.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fe/Dalmatien.jpg/320px-Dalmatien.jpg" alt="Bolt"
-                        class="tamano_imagenes"></a>
+                <a href="Bolt.html"><img src="./assets/img/bolt.jpg" alt="Bolt"
+                        class="tamannio_imagen_1"></a>
                 <h3>Bolt</h3>
             </td>
 
             <td class="animal">
-                <a href="Travis.html"><img src="https://st5.depositphotos.com/35396558/62327/i/450/depositphotos_623277438-stock-photo-black-cane-corso-dog-stands.jpg" alt="Travis" class="tamano_imagenes"></a>
+                <a href="Travis.html"><img src="./assets/img/travis.jpg" alt="Travis" class="tamannio_imagen_1"></a>
                 <h3>Travis</h3>
             </td>
 
             <td class="animal">
-                <a href="Rihanna.html"><img src="https://www.hogarmania.com/archivos/202309/nombres-para-perros-negros-raza-schnauzer-XxXx80.jpg" alt="Rihanna" class="tamano_imagenes_1"></a>
+                <a href="Rihanna.html"><img src="./assets/img/rihanna.jpg" alt="Rihanna" class="tamannio_imagen_1"></a>
                 <h3>Rihanna</h3>
             </td>
         </tr>
