--- a/Bolt.html
+++ b/Bolt.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ayuda a un peludo</title>
     <link type="text/css" rel="stylesheet" href="assets/css/estilos2.css">
-    <link rel="icon" type="image/jpg" href="assets/img/LOGO.png">
 </head>
 <ul>
     <li><a class="active" href="index.html">Inicio</a></li>
@@ -16,11 +14,10 @@
     <li><a href="Gatos.html">Gatos</a></li>
 </ul>
 <body>
-    <h2>Travis</h2>
-    <img src="https://st5.depositphotos.com/35396558/62327/i/450/depositphotos_623277438-stock-photo-black-cane-corso-dog-stands.jpg" alt="." class="tamano_imagenes_2">
-    <h4>Edad: 2 años</h4>
+    <h2>Bolt</h2>
+    <img src="./assets/img/bolt.jpg"alt="Bolt" class="tamano_imagenes_4">
+    <h4>Edad: 10 años</h4>
     <h4>Genero: Macho</h4>
     <h4>Esterilizado: No</h4>
 </body>
-
 </html>
