--- a/Rihanna.html
+++ b/Rihanna.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ayuda a un peludo</title>
-    <link type="text/css" rel="stylesheet" href="assets/css/Estilos.css">
-    <link rel="icon" type="image/jpg" href="img/LOGO.png">
+    <link type="text/css" rel="stylesheet" href="assets/css/estilos2.css">
 </head>
 <ul>
     <li><a class="active" href="index.html">Inicio</a></li>
@@ -15,13 +14,11 @@
     <li><a href="perros_adop.html">Perros</a></li>
     <li><a href="Gatos.html">Gatos</a></li>
 </ul>
-
 <body>
-    <div></div>
-    <h2>Tupac</h2>
-    <img src="./assets/img/cat-black-kitty-black-cat-e1692190700182.jpg" alt="." class="tamannio_imagen_1">
-    <h4>Edad: 10 años</h4>
-    <h4>Sexo: Macho</h4>
+    <h2>Rihanna</h2>
+    <img src="./assets/img/rihanna.jpg" alt="Flaca" class="tamano_imagenes_3">
+    <h4>Edad: 4 años</h4>
+    <h4>Genero: Hembra</h4>
     <h4>Esterilizado: Si</h4>
 </body>
 
